horizontal slide fix

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
@@ -76,7 +76,7 @@
 			    		<option value="hrs">hour(s)</option>
 		            </select>
 
-					<button type="submit" class="btn btn-success btn-cons2 right pull-right" id="save-content-collection"> <i class="fa fa-check"></i> Save</button>
+					<button type="submit" class="btn btn-success btn-cons2 right pull-right m-t-10" id="save-content-collection"> <i class="fa fa-check"></i> Save</button>
 				
 			</div>											 
 		</div>
