--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
@@ -1,11 +1,11 @@
 <div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10">
-  <button type="button" id="question-done" class="btn btn-primary btn-xs btn-sm">
+  <button type="button" id="question-done" class="btn btn-success btn-xs btn-sm">
     <i class="fa fa-forward"></i> Next Question 
   </button>
 </div>
 
 <div class="clearfix"></div>
-<div class="row students m-t-20">
+<div class="row students m-l-0 m-r-0 m-t-20">
 	<div class="col-sm-2 m-b-20">
 		<div id="few" class="row single tiles white no-margin">    
             <div class="col-md-7 col-xs-7 no-padding">
