--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -22,7 +22,7 @@
 
 				<!-- BEGIN MOBILE CHAT TOGGLER -->
 				<li style="display:none" id="portrait-chat-toggler" class="dropdown">
-					<a class="chat-menu-toggle right-menu" href="#sidr">
+					<a class="chat-menu-toggle right-menu" href="#walnutProfile">
 						<div class="iconset top-chat-white"></div>
 					</a>
 				</li>
@@ -44,6 +44,11 @@
 
 
 <div id="walnutProfile">
-    <div id="app_username" class="user">{{show_user_name}}</div>
-    <a id="logout" class="appLogout" href="javascript://" ><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a>
+	<div>
+	    <div id="app_username" class="user">{{show_user_name}}</div>
+	    <ul class="List">
+	    	<li><a id="logout" class="appLogout" href="javascript://" ><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
+	    </ul>
+	</div>
+    
 </div>
