Chorus question fix

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
@@ -37,10 +37,10 @@
                     {{#isTraining}}
                         <p>Visible in Class room mode</p>
                     {{/isTraining}}
-                    {{#isClass}}
+                    {{^isTraining}}
                         <div class="cpTimer" data-timer="{{timeLeftOrElapsed}}"></div>
                         {{&getCompletedSummary}}
-                    {{/isClass}}
+                    {{/isTraining}}
                 </div>
             </div>
         </div>
