--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
@@ -1,6 +1,6 @@
 <!-- BEGIN HEADER RIGHT SIDE SECTION -->
 	<!-- BEGIN HEADER NAV BUTTONS -->
-	<ul class="nav quick-section2">
+	<ul class="nav quick-section2" id="gears-pc">
 		<!-- BEGIN SETTINGS -->
 		<li class="quicklinks"> 
 			<a id="user-options" href="#" class="dropdown-toggle pull-right" data-toggle="dropdown">						
