--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -4,13 +4,23 @@
 		<!-- BEGIN NAVIGATION HEADER -->
 		<div class="header-seperation"> 
 			<!-- BEGIN MOBILE HEADER -->
-			<ul style="display:none" id="main-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
+
+			<!-- <ul style="display:none" id="main-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
 				<li class="dropdown">
 					<a class="" href="#main-menu" id="main-menu-toggle">
-						<div class="iconset top-menu-toggle-white"></div>
+						<span class="fa fa-bars"></span>
+					</a>
+				</li>		 
+			</ul> -->
+
+			<ul style="display:none" id="main-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
+				<li class="dropdown">
+					<a class="" href="#teachers/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
 					</a>
 				</li>		 
 			</ul>
+
+
 			<!-- END MOBILE HEADER -->
 			<!-- BEGIN LOGO -->	
 			<a href="#">
@@ -18,15 +28,24 @@
 			</a>
 			<!-- END LOGO --> 
 			<!-- BEGIN LOGO NAV BUTTONS -->
-			<ul class="nav pull-right notifcation-center">
-
-				<!-- BEGIN MOBILE CHAT TOGGLER -->
+			<!-- <ul class="nav pull-right notifcation-center">
 				<li style="display:none" id="portrait-chat-toggler" class="dropdown">
 					<a class="chat-menu-toggle right-menu" href="#walnutProfile">
-						<div class="iconset top-chat-white"></div>
+						<span class="bicon icon-uniF171"></span>
 					</a>
 				</li>
-				<!-- END MOBILE CHAT TOGGLER -->
+			</ul> -->
+			<ul class="nav quick-section2 pull-right notifcation-center" id="gears-mob">
+				<li class="quicklinks"> 
+					<a id="user-options" href="#" class="dropdown-toggle pull-right" data-toggle="dropdown">	
+						<span class="fa fa-gears"></span>	
+					</a>
+					<ul aria-labelledby="user-options" role="menu" class="dropdown-menu pull-right">
+						<li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
+						<li class="divider"></li>                
+						<li><a id="user_logout" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;Log Out</a></li>
+					</ul>
+				</li>
 			</ul>
 			<!-- END LOGO NAV BUTTONS -->
 		</div>
