--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -400,4 +400,8 @@ select{
 	.header .nav .open > a, .nav .open > a:hover, .nav .open > a:focus{
 		background: transparent;
 	}
+
+	.page-content{
+		min-height: 0;
+	}
 }
