--- a/HTML/assets/less/modules/form_elements.less
+++ b/HTML/assets/less/modules/form_elements.less
@@ -33,11 +33,11 @@ input[type="color"] {
     -webkit-appearance: none !important;
     color: #282323;
     outline: 0;
-    height: 16px;
+    height: 50px;
     padding: 6px 11px !important;
     line-height: 15px;
-    font-size: 16px;
-    font-weight: normal;
+    font-size: 18px;
+    font-weight: bold;
     vertical-align: top;
     background-color:  @color-white ;
     min-height: 37px;
@@ -1327,7 +1327,7 @@ form legend,.form-view legend {
         color: #e5e9ec;
         display: block;
         position: absolute;
-        margin: 9px 2px 4px 10px;
+        margin: 15px 2px 4px 10px;
         width: 16px;
         height: 16px;
         font-size: 16px;
