--- a/wp-content/themes/walnut/walnut/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut/dev/css/style.css
@@ -1524,16 +1524,16 @@ h6 {
   color: #505458;
 }
 h1 {
-  line-height: 43px;
+  line-height: 46px;
 }
 h2 {
-  line-height: 35px;
+  line-height: 38px;
 }
 h3 {
-  line-height: 30px;
+  line-height: 34px;
 }
 h4 {
-  line-height: 22px;
+  line-height: 28px;
 }
 h3 small,
 h4 small,
@@ -2696,11 +2696,11 @@ input[type="color"] {
   -webkit-appearance: none !important;
   color: #282323;
   outline: 0;
-  height: 16px;
+  height: 50px;
   padding: 6px 11px !important;
   line-height: 15px;
-  font-size: 16px;
-  font-weight: normal;
+  font-size: 18px;
+  font-weight: bold;
   vertical-align: top;
   background-color: #ffffff;
   min-height: 37px;
@@ -3808,7 +3808,7 @@ form legend,
   color: #e5e9ec;
   display: block;
   position: absolute;
-  margin: 9px 2px 4px 10px;
+  margin: 15px 2px 4px 10px;
   width: 16px;
   height: 16px;
   font-size: 16px;
