--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
@@ -1,6 +1,6 @@
 {{#isTraining}}
     <div class="well text-center">
-        <h4><span class="semi-bold">This is a practise mode.
+        <h4><span class="bold">This is a practise mode.
             It is designed to help you train for the class</span></h4>
     </div>
 {{/isTraining}}
@@ -93,7 +93,7 @@
                             </div>
                         {{/isTraining}}
                         {{#isTraining}}
-                            <p>This will display what is the elapsed module
+                            <p class="small-text muted">This will display what is the elapsed module
                                 time of the training module in class mode.</p>
                         {{/isTraining}}
                     </div>
@@ -114,7 +114,7 @@
                         </div>
                     {{/isTraining}}
                     {{#isTraining}}
-                            <p> This will display the progress of training module in class mode.</p>
+                            <p class="small-text muted"> This will display the progress of training module in class mode.</p>
                     {{/isTraining}}
 
                 </div>
