--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
@@ -1,6 +1,6 @@
 {{#isTraining}}
     <div class="well text-center">
-        <h4><span class="semi-bold">This is a practise mode.
+        <h4><span class="bold">This is a practise mode.
                 It is designed to help you train for the class</span></h4>
     </div>
 {{/isTraining}}
