--- a/HTML/assets/css/style - bkup.css
+++ b/HTML/assets/css/style - bkup.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 /*Custom Mixins*/
 .ease {
   -webkit-transition: all 0.3s ease-out;
@@ -1506,7 +1507,7 @@ body {
 .notification-alert {
   width: 29px;
   height: 29px;
-  background-image: url("../../../images/notification-alert.png");
+  background-image: url("../img/notification-alert.png");
   position: absolute;
   float: right;
   right: -15px;
@@ -1524,16 +1525,16 @@ h6 {
   color: #505458;
 }
 h1 {
-  line-height: 46px;
+  line-height: 43px;
 }
 h2 {
-  line-height: 38px;
+  line-height: 35px;
 }
 h3 {
-  line-height: 34px;
+  line-height: 30px;
 }
 h4 {
-  line-height: 28px;
+  line-height: 22px;
 }
 h3 small,
 h4 small,
@@ -1718,7 +1719,7 @@ blockquote.pull-right small:after {
   color: #8b91a0 !important;
 }
 .text-black {
-  color: #003d4f !important;
+  color: #1b1e24 !important;
 }
 .text-purple {
   color: #852b99 !important;
@@ -1730,7 +1731,7 @@ blockquote.pull-right small:after {
   color: #8b91a0 !important;
 }
 .text-success {
-  color: #0aa699 !important;
+  color: #e74c30 !important;
 }
 .text-info {
   color: #0090d9 !important;
@@ -2699,8 +2700,8 @@ input[type="color"] {
   height: 16px;
   padding: 6px 11px !important;
   line-height: 15px;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 13px;
+  font-weight: normal;
   vertical-align: top;
   background-color: #ffffff;
   min-height: 37px;
@@ -2875,6 +2876,9 @@ textarea[class*="span"] {
 .xsmall {
   width: 50px !important;
 }
+.small {
+  width: 120px !important;
+}
 .medium {
   width: 206px !important;
 }
@@ -2943,11 +2947,11 @@ textarea[class*="span"] {
   opacity: 0.65;
 }
 .radio.radio-success label:after {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
 }
 .radio.radio-success input[type=radio]:checked + label:before {
-  border: 1px solid #0aa699;
+  border: 1px solid #e74c30;
 }
 .radio.radio-primary label:after {
   background-color: #e74c30;
@@ -3065,8 +3069,8 @@ textarea[class*="span"] {
   background-color: #eceff3;
 }
 .checkbox.check-success input[type=checkbox]:checked + label:before {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
 }
 .checkbox.check-success input[type=checkbox]:checked + label::after {
   color: #ffffff;
@@ -3496,7 +3500,7 @@ form legend,
 }
 .slide-success .ios-switch .on-background {
   background-image: none;
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .select2-container .select2-choice {
   background-image: none;
@@ -3724,7 +3728,7 @@ form legend,
   color: #e74c30;
 }
 .input-append.success .add-on .arrow {
-  color: #007366;
+  color: #b41900;
 }
 .input-append.info .add-on .arrow {
   color: #005da6;
@@ -3758,7 +3762,7 @@ form legend,
 }
 .input-append.success .add-on,
 .input-prepend .add-on {
-  background-color: #007366;
+  background-color: #b41900;
   color: #ffffff;
   display: inline-block;
   float: left;
@@ -3808,7 +3812,7 @@ form legend,
   color: #e5e9ec;
   display: block;
   position: absolute;
-  margin: 15px 2px 4px 10px;
+  margin: 9px 2px 4px 10px;
   width: 16px;
   height: 16px;
   font-size: 16px;
@@ -4088,7 +4092,7 @@ form legend,
   margin-top: 3px;
 }
 .grid.box .grid-title .tools a {
-  background: url(../../../images/icon/portlet-tray.png) no-repeat;
+  background: url(../img/icon/portlet-tray.png) no-repeat;
   width: 23px;
   height: 23px;
 }
@@ -4284,8 +4288,8 @@ form legend,
 }
 .grid-title h4 {
   display: inline-block;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 16px;
+  font-weight: 400;
   margin: 0;
   padding: 0;
   margin-bottom: 7px;
@@ -4446,7 +4450,7 @@ form legend,
 .grid.simple .grid-title .tools a,
 .grid.solid .grid-title .tools a {
   position: relative;
-  background: url('../../../images/icon/portlet-tray.png') no-repeat;
+  background: url('../img/icon/portlet-tray.png') no-repeat;
   transition: all 0.1s linear 0s;
 }
 .grid.simple .grid-title .tools > a.remove,
@@ -4523,7 +4527,7 @@ form legend,
 }
 .tiles .controller a {
   position: relative;
-  background: url('../../../images/icon/portlet-tray.png') no-repeat;
+  background: url('../img/icon/portlet-tray.png') no-repeat;
   transition: all 0.1s linear 0s;
   display: inline-block;
 }
@@ -4726,9 +4730,6 @@ form legend,
   background-color: #0090d9;
 }
 .tiles.green {
-  background-color: #0aa699;
-}
-.tiles.default {
   background-color: #e74c30;
 }
 .tiles.black {
@@ -4861,7 +4862,7 @@ form legend,
 }
 .widget-item .controller a {
   position: relative;
-  background: url('../../../images/icon/portlet-tray.png') no-repeat;
+  background: url('../img/icon/portlet-tray.png') no-repeat;
   transition: all 0.1s linear 0s;
   display: inline-block;
 }
@@ -4985,7 +4986,7 @@ form legend,
 }
 .widget .controller a {
   position: relative;
-  background: url('../../..images/icon/portlet-tray.png') no-repeat;
+  background: url('../img/icon/portlet-tray.png') no-repeat;
   transition: all 0.1s linear 0s;
   display: inline-block;
 }
@@ -5086,8 +5087,8 @@ form legend,
 }
 .btn {
   display: inline-block;
-  padding: 10px 18px;
-  padding-top: 10px;
+  padding: 9px 12px;
+  padding-top: 7px;
   margin-bottom: 0;
   font-size: 14px;
   line-height: 20px;
@@ -5160,7 +5161,7 @@ form legend,
 }
 .btn-success {
   color: #ffffff;
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -5168,7 +5169,7 @@ form legend,
 .btn-success.active,
 .btn-success.disabled,
 .btn-success[disabled] {
-  background-color: #007366;
+  background-color: #b41900;
 }
 .btn-info {
   color: #ffffff;
@@ -5262,8 +5263,8 @@ form legend,
   margin-top: 4px;
 }
 .btn-small {
-  padding: 8px 12px;
-  font-size: 13px;
+  padding: 3px 12px;
+  font-size: 11.9px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -5296,7 +5297,7 @@ form legend,
   background-color: #d13736;
 }
 .btn-group.open .btn-success.dropdown-toggle {
-  background-color: #008477;
+  background-color: #c52a0e;
 }
 .btn-group.open .btn-info.dropdown-toggle {
   background-color: #006eb7;
@@ -5588,7 +5589,7 @@ code:hover {
 }
 .nav .tools a {
   position: relative;
-  background: url('../../../images/icon/portlet-tray.png') no-repeat;
+  background: url('../img/icon/portlet-tray.png') no-repeat;
   transition: all 0.1s linear 0s;
 }
 .nav > .disabled > a:hover,
@@ -5793,7 +5794,7 @@ code:hover {
   background-image: none;
 }
 .slider.sucess .slider-track {
-  background: #0aa699;
+  background: #e74c30;
   background-image: none;
 }
 .slider.info .slider-track {
@@ -5972,48 +5973,48 @@ code:hover {
   opacity: 1;
 }
 .alert-success {
-  color: #007366;
+  color: #b41900;
   background-color: #f3faf8;
-  border-color: #009588;
+  border-color: #d63b1f;
 }
 .alert-success::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .link {
-  color: #007366;
+  color: #b41900;
 }
 .alert-success .link::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .link::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .alert-heading {
-  color: #006255 !important;
+  color: #a30800 !important;
 }
 .alert-success .alert-heading::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .alert-heading::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
@@ -6022,13 +6023,13 @@ code:hover {
   background-position: -38px -10px !important;
 }
 .alert-success .close::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .close::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
@@ -6307,7 +6308,7 @@ code:hover {
   transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 .progress-bar-success {
-  background-color: #0aa699;
+  background-color: #e74c30;
   background-image: none;
 }
 .progress-bar-info {
@@ -6327,7 +6328,7 @@ code:hover {
   background-image: none;
 }
 .progress-bar-black {
-  background-color: #003d4f;
+  background-color: #1b1e24;
   background-image: none;
 }
 .progress-info .bar,
@@ -6352,7 +6353,7 @@ code:hover {
 }
 .progress-success.progress-striped .bar,
 .progress-striped .bar-success {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .progress-info.progress-striped .bar,
 .progress-striped .bar-info {
@@ -6390,7 +6391,7 @@ code:hover {
 }
 .label-success,
 .badge-success {
-  background-color: #0aa699;
+  background-color: #e74c30;
   color: #ffffff;
 }
 .label-warning,
@@ -7336,8 +7337,8 @@ input[type="checkbox"] {
   font-size: 1.3em;
 }
 .cbp_tmtimeline > li .cbp_tmicon.success {
-  background: #1bb7aa;
-  box-shadow: 0 0 0 8px #2cc8bb;
+  background: #f85d41;
+  box-shadow: 0 0 0 8px #ff6e52;
   color: #ffffff;
 }
 .cbp_tmtimeline > li .cbp_tmicon.primary {
