--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1702,6 +1702,9 @@ h3.time {
     *width: 20%;
   }
 }
+input#duration {
+  max-width: 150px;
+}
 #myCanvas-miki .cbp_tmlabel a {
   color: #e74c30;
 }
