edit media description and other minor changes

--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
@@ -11,7 +11,7 @@
 {{#videoPreview}}
 <a class="thumbnail">
     <div class="imgthumb">{{title_excerpt}}</div>
-    <div class="imaTitle"><span>{{title}}</span></div>
+    <div class="imaTitle"><span>{{title_show}}</span></div>
     <div class="ticker">
         <span class="glyphicon glyphicon-ok"></span>
         <span class="glyphicon glyphicon-minus"></span>
