--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/edit-media/templates/form.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/edit-media/templates/form.html
@@ -3,19 +3,19 @@
   <h5>Edit Media</h5>
   <div class="form-group">
     <label for="">Title</label>
-    <input type="text" placeholder="" value="{{title}}" class="form-control"/>
+    <input type="text" placeholder="" name="title" value="{{title}}" class="form-control"/>
   </div>
   <div class="form-group">
     <label for="">Caption</label>
-    <input type="text" placeholder="" value="{{caption}}" class="form-control"/>
+    <input type="text" placeholder="" name="caption" value="{{caption}}" class="form-control"/>
   </div>
   <div class="form-group">
     <label for="">Alt Text</label>
-    <input type="text" placeholder="" value="{{alt}}" class="form-control"/>
+    <input type="text" placeholder="" name="alt" value="{{alt}}" class="form-control"/>
   </div>
   <div class="form-group">
     <label for="">Description</label>
-    <input type="text" placeholder="" value="{{description}}" class="form-control"/>
+    <input type="text" placeholder="" name="description" value="{{description}}" class="form-control"/>
   </div>
-  <button type="button" class="btn btn-primary">Save Details</button>
+  <button type="button" id="save-media-details" class="btn btn-primary">Save Details</button>
 </form>
