back button to come back to list of modules

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
@@ -1,3 +1,9 @@
+<button type="button" id="go-back-button" class="btn btn-white btn-cons">
+    <h4 class="bold  text-info no-margin">
+        <i class="fa fa-chevron-left"></i>
+        List of Modules
+    </h4>
+</button>
 {{#isTraining}}
     <div class="well text-center">
         <h4><span class="bold">This is a practise mode.
