--- a/HTML/assets/less/modules/tabs_accordians.less
+++ b/HTML/assets/less/modules/tabs_accordians.less
@@ -254,6 +254,7 @@
         background-color: #D9E0E4;
         border-radius: 2px;
         box-shadow: none;
+        padding: 5px;
     }
 }
 .panel-group {
@@ -262,6 +263,7 @@
         & + .panel-collapse {
             .panel-body {
                 border: 0;
+                padding: 5px 25px;
             }
         }
     }
@@ -274,7 +276,8 @@
 .panel-title {
     & > a {
         color: #505458;
-        font-size: 13px;
+        // font-size: 13px;
+        font-size: 15px;
         font-weight: normal;
         display: block;
         &:hover {
@@ -294,7 +297,7 @@
             &:after {
                 font-family: 'FontAwesome';
                 content: "\f056";
-                float: right;
+                float: left;
                 color: #505458;
             }
             &.collapsed {
