--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -28,6 +28,9 @@
 .block {
   display: block;
 }
+.none {
+  display: none;
+}
 @media (max-width: 1024px) {
   .nonDevice {
     display: none;
@@ -730,9 +733,6 @@
 }
 .modal-content .modal-body button {
   float: right;
-}
-.modal-content .modal-footer {
-  display: none;
 }
 .imagewithtext .image-placeholder {
   float: left;
@@ -1705,6 +1705,9 @@ h3.time {
 input#duration {
   max-width: 150px;
 }
+.durationSelect {
+  width: 90px;
+}
 #myCanvas-miki .cbp_tmlabel a {
   color: #e74c30;
 }
@@ -1763,6 +1766,21 @@ input#duration {
 .progress-bar {
   color: #6a6a6a;
   font-weight: bold;
+}
+.panel-default > .panel-heading {
+  background-color: transparent;
+}
+.panel-default > .panel-heading.collapsed {
+  background-color: transparent;
+}
+li.setGroup {
+  margin-bottom: 20px;
+}
+li.setGroup .abc {
+  margin-bottom: 2px;
+}
+li.setGroup .abc:not(:first-child):after {
+  display: none;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
@@ -2004,6 +2022,19 @@ textarea {
 .form-control .select2-choice .select2-arrow b:before {
   top: 6px;
 }
+input[disabled].disabled {
+  cursor: not-allowed;
+  background-color: #e5e9ec;
+}
+.checkbox label {
+  font-size: 14px;
+}
+.nav-tabs > li > a {
+  font-size: 16px;
+}
+.table td {
+  font-size: 15px;
+}
 .progress {
   background: #d6dde1;
 }
@@ -2028,8 +2059,8 @@ select {
   position: relative;
   line-height: 1;
   width: 100%;
-  min-height: 45px;
-  padding: 10px;
+  min-height: 38px;
+  padding: 6px;
   background: #f3f3f3;
   border: 1px solid #e5e9ec;
   box-shadow: inset 0 -1px 2px rgba(0, 0, 0, 0.05);
