--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -1773,14 +1773,12 @@ input#duration {
 .panel-default > .panel-heading.collapsed {
   background-color: transparent;
 }
-li.setGroup {
+.cbp_tmtimeline li.setGroup {
   margin-bottom: 20px;
 }
-li.setGroup .abc {
+.cbp_tmtimeline li.setGroup .cbp_tmlabel {
   margin-bottom: 2px;
-}
-li.setGroup .abc:not(:first-child):after {
-  display: none;
+  padding: 10px;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
