--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -19,6 +19,7 @@
                           <div class="col-sm-12  m-b-10 m-t-10">
                             <div class="">
                               <button id="syncStartContinue" type="button" class="btn btn-success h-center block"><span id="syncButtonText" class="bold">Start</span></button>
+                               <button id="chkFiles" type="button" class="btn btn-success h-center block"><span class="bold">Check</span></button>
                               
                               <h5 id="syncSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
