child site setup global POST reference removed content creator options - removed question type for content piece create training module - removed required property of physical requirements

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="row m-b-15">
-                <div class="col-sm-4">
+                <div class="col-sm-4" id="question_type_column">
                     <label class="form-label">Question Type</label>
                     <select required name="question_type" id="qType" class="form-control select2" >
                         <option value="">--select question type--</option>
