--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
@@ -16,7 +16,7 @@
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Physical Requirements</label>
-					<textarea name="description[physical_requirements]"  required="required" class="form-control" placeholder="Enter Physical Requirements">{{description.physical_requirements}}</textarea>
+					<textarea name="description[physical_requirements]" class="form-control" placeholder="Enter Physical Requirements">{{description.physical_requirements}}</textarea>
 				</div>
 			</div>
 			<div class="col-md-4">
