textbook name html entities fix

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -11,7 +11,7 @@
                     <select required name="term_ids[textbook]" id="subs" class="form-control select2" >
                         <option value="">--select textbook--</option>
                         {{#textbooksFilter}}
-                        <option value="{{id}}" {{#selected}} selected="selected" {{/selected}}>{{name}}</option>
+                        <option value="{{id}}" {{#selected}} selected="selected" {{/selected}}>{{&name}}</option>
                         {{/textbooksFilter}}
                     </select>
                 </div>
