slide in animation trial for few views

--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -28,6 +28,9 @@
 .block {
   display: block;
 }
+.none {
+  display: none;
+}
 @media (max-width: 1024px) {
   .nonDevice {
     display: none;
@@ -730,9 +733,6 @@
 }
 .modal-content .modal-body button {
   float: right;
-}
-.modal-content .modal-footer {
-  display: none;
 }
 .imagewithtext .image-placeholder {
   float: left;
@@ -1705,6 +1705,9 @@ h3.time {
 input#duration {
   max-width: 150px;
 }
+.durationSelect {
+  width: 90px;
+}
 #myCanvas-miki .cbp_tmlabel a {
   color: #e74c30;
 }
@@ -1763,6 +1766,19 @@ input#duration {
 .progress-bar {
   color: #6a6a6a;
   font-weight: bold;
+}
+.panel-default > .panel-heading {
+  background-color: transparent;
+}
+.panel-default > .panel-heading.collapsed {
+  background-color: transparent;
+}
+.cbp_tmtimeline li.setGroup {
+  margin-bottom: 20px;
+}
+.cbp_tmtimeline li.setGroup .cbp_tmlabel {
+  margin-bottom: 2px;
+  padding: 10px;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
@@ -1985,9 +2001,12 @@ textarea {
   font-size: 15px !important;
 }
 .label {
-  font-size: 15px;
+  font-size: 14px;
   display: inline-block;
   padding: 6px 9px;
+}
+.alert {
+  font-size: 14px;
 }
 .btn {
   font-weight: bold;
@@ -2004,16 +2023,45 @@ textarea {
 .form-control .select2-choice .select2-arrow b:before {
   top: 6px;
 }
+input[disabled].disabled {
+  cursor: not-allowed;
+  background-color: #e5e9ec;
+}
+.checkbox label {
+  font-size: 14px;
+}
+.nav-tabs > li > a {
+  font-size: 16px;
+}
+.table td {
+  font-size: 15px;
+}
 .progress {
   background: #d6dde1;
+}
+::-webkit-input-placeholder {
+  color: #cdcdcd;
+}
+:-moz-placeholder {
+  /* Firefox 18- */
+
+  color: #cdcdcd;
+}
+::-moz-placeholder {
+  /* Firefox 19+ */
+
+  color: #cdcdcd;
+}
+:-ms-input-placeholder {
+  color: #cdcdcd;
 }
 select {
   display: inline-block;
   position: relative;
   line-height: 1;
   width: 100%;
-  min-height: 45px;
-  padding: 10px;
+  min-height: 38px;
+  padding: 6px;
   background: #f3f3f3;
   border: 1px solid #e5e9ec;
   box-shadow: inset 0 -1px 2px rgba(0, 0, 0, 0.05);
@@ -2070,5 +2118,8 @@ select:before {
   .nav .open > a:hover,
   .nav .open > a:focus {
     background: transparent;
+  }
+  .page-content {
+    min-height: 0;
   }
 }
