--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
@@ -1,6 +1,6 @@
 <form name="content-collection-form" id="content-collection-form">
 	<div class="grid-title no-border">
-	<input id="group_name" name="name" placeholder="Module Name" type="text" required="required" />
+	<input id="group_name" class="input-lg" name="name" placeholder="Module Name" type="text" required="required" />
 	<div class="tools">
 		<a href="javascript:;" class="collapse"></a>
 	</div>
