--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -62,7 +62,7 @@
 </div>
 
 
-<div id="walnutProfile">
+<!-- <div id="walnutProfile">
 	<div>
 	    <div id="app_username" class="user">{{show_user_name}}</div>
 	    <ul class="List">
@@ -70,4 +70,4 @@
 	    </ul>
 	</div>
     
-</div>
+</div> -->
