--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -304,9 +304,13 @@ label, input, button, select, textarea{
 }
 
 .label{
-	font-size: 15px;
+	font-size: 14px;
 	display: inline-block;
 	padding: 6px 9px;
+}
+
+.alert{
+	font-size: 14px;
 }
 
 .btn{
