select2 style change to fit text better

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -184,6 +184,8 @@
 	background: @preview-grey;
 	padding: 15px 10px;
 	color: #000;
+	font-size: 14px;
+	font-weight: normal;
 	label{
 		color: #777a80;
 	}
