--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-selection/templates/content-selection.html
@@ -17,7 +17,7 @@
 						</select>
 					{{/tableData.filters}}-->
 					
-						<select class="textbook-filter" id="textbooks-filter" style="width:150px">
+						<select class="textbook-filter m-r-5" id="textbooks-filter" style="width:200px">
 							<option value="">Select Textbooks</option>
 							{{#textbooksFilter}}
 								<option value="{{id}}">{{name}}</option>
@@ -32,7 +32,7 @@
 						<select class="textbook-filter" id="subsections-filter" style="width:200px">
 								<option value="">Select Sub Sections</option>
 						</select>
-                        <select class="content-type-filter" id="content-type-filter" style="width:200px">
+                        <select class="content-type-filter" id="content-type-filter" style="width:150px">
                             <option value="">All</option>
                             <option value="teacher_question">Teacher Question</option>
                             <option value="content_piece">Content Piece</option>
