question options hidden for content pieces that are not questions

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display-item.html
@@ -11,11 +11,11 @@
 		<div class="clearfix"></div>
         <div class="tiles grey p-t-10 p-b-10 p-l-20">
             <div class="muted">
-                <div>
+                <div id="question-type-div">
                     <span class="bold">Question Type:</span> {{question_type}}, <span class="bold">Date Completed:</span> {{dateCompleted}}
                 </div>
                 {{#responseStatus}}
-                <div>
+                <div id="correct-answer-div">
                     <span class="bold">Correct Answer:</span> {{correctAnswer}}
                 </div>
                 <div>
