--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
@@ -26,7 +26,7 @@
                             <label class="form-label bold small-text">Sub-Section</label>
                             {{getSubSectionsNames}}
                         </div>
-                        <div class="col-xs-4 b-grey b-r">
+                        <div class="col-xs-4 b-grey b-r" id="question-type-col">
                             <label class="form-label bold small-text">Type</label>
                             <span style="text-transform: capitalize">{{question_type}}</span>
                         </div>
