video upload changes

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -589,8 +589,8 @@
 	}
 }
 
-.image{
-	.image-placeholder{
+.image, .video{
+	.image-placeholder, .video-placeholder{
 		padding: 2% 0;
 		text-align: center;
 		//border: 3px dashed @preview-grey;
