--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -240,7 +240,7 @@ textarea.error, .select2-choice.error {
 }
 
 .page-content.condensed{
-	overflow-y: visible;
+	overflow: visible;
 }
 
 .page-content{
