--- a/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
@@ -11,7 +11,7 @@
     <div id="grid-region" class="col-md-9"></div>
     <div id="edit-media-region" class="col-md-3">
       <div class="pick-image p-t-50">
-        <h4><span class="glyphicon glyphicon-hand-left"></span>Select an Image from the library</h4>
+        <h4><span class="glyphicon glyphicon-hand-left"></span>Select an item from the library</h4>
       </div>
     </div>
   </div>
