--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -346,6 +346,12 @@ input[disabled].disabled{
 	background-color: @body-bg;
 }
 
+ol {
+	&>li{
+		line-height: 35px;
+	}
+}
+
 .checkbox label{
 	font-size: 14px;
 }
